tests/sksl/errors/PrototypeInFuncBody.dsl.glsl
### Compilation failed:

error: expected ';', but found '('
1 error
